# rpg-generator-cpp

./: .gitignore  CMakeLists.txt  README.md  character.cpp  character.h  item.cpp  item.h  main.cpp  types.h
data/: characters.txt  items.txt
